--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,6 @@
   box-sizing: border-box;
 }
 
-html, body {
-  overflow-x: hidden;
-  max-width: 100vw;
-  width: 100%;
-}
-
 body {
   background-color: var(--bg-cream);
   color: var(--text-dark);
@@ -31,7 +25,6 @@ body {
 }
 
 #root {
-  overflow-x: hidden;
   width: 100%;
   display: flex;
   flex-direction: column;
